# AdvectionSolver

./: .gitignore  CMakeLists.txt  README.md  createDist.cc  createDist.cpp  customDist.txt  environment.yml  inputDist.txt  main.cc  main.cpp  matplotlibrc  plotting.py  ruff.toml  run.ps1  start.sh
PKGBUILDs/python-mesh-hydro-utils/: PKGBUILD
PKGBUILDs/python-mesh-hydro-utils-git/: .SRCINFO  PKGBUILD
include/: fluxes.h  fluxes.hh  loadData.hh  loaddata.h  simulation.h  simulation.hh
src/: fluxes.cc  fluxes.cpp  loadData.cc  loadData.cpp  simulation.cc  simulation.cpp
